--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ a{
     /* transition: all 0.3s ease-in-out; */
 }
 #planet-menu{
-    font-size: 1.5em;
+    font-size: 1.5rem;
     line-height: 1.75rem;
     font-family: "Space Mono", monospace;
     font-weight: 400;   
