--- a/index.css
+++ b/index.css
@@ -55,14 +55,14 @@ a{
     /* transition: all 0.3s ease-in-out; */
 }
 #planet-menu{
-    font-size: 1.5rem;
+    font-size: 1rem;
     line-height: 1.75rem;
     font-family: "Space Mono", monospace;
     font-weight: 400;   
     position: fixed; 
     top: 0; 
     right: 0; 
-    width: 12.5rem; 
+    width: 6.3rem; 
     height: 100%; 
     background: rgba(0,0,0,0.5); 
     display: none;
@@ -74,7 +74,7 @@ a{
     padding: 0;
 }
 #planet-menu li {
-    padding: 1rem;
+    padding: 0.5rem;
     border-bottom: 1px solid #ccc;
 }
 #planet-menu li:hover {
@@ -98,7 +98,7 @@ a{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80vw; /* Fixed width */
-    height: 60vh; /* Fixed height */
+    height: 70vh; /* Fixed height */
     background: rgba(20, 26.7, 51.4, 0.6);
     color: white;
     border-radius: 10px;
@@ -109,12 +109,12 @@ a{
 }
 #overlay-header{
     position:relative;
-    height: 15rem;
+    height: 10rem;
     align-items: center;
 }
 #overlay-body{
     position: relative;
-    height: 10rem;
+    height: 15rem;
     margin: 0;
 }
 #overlay-links{
@@ -167,7 +167,7 @@ a{
 }
 .planetName{
     top: 1.3vw;
-    left: 1vw;
+    left: 1.5vw;
     position: relative;
     font-size: 3rem;
     font-weight:normal;
@@ -204,8 +204,8 @@ a{
     background-color: #0056b3; /* Darker shade when hovered */
 }
 .planet-info-links{
-    /* display: block; */
-    font-size: 1.5rem;
+    display: block;
+    font-size: 1rem;
     position: relative;
     padding: 0.5%; 
     background-color: rgba(0, 123, 255, 0.3); /* Adjusted background color with opacity */
@@ -214,7 +214,7 @@ a{
     text-decoration: none; /* Removes underline from links */
     box-sizing: border-box; /* Ensures padding is included in the element's total width */
     transition: background-color 0.3s; /* Smooth transition for hover effect */
-    width: 15%;
+    width: 20%;
     margin: 0 auto;
     margin-top: 2%;
     margin-bottom: 0%;
@@ -231,12 +231,12 @@ a{
     position: absolute;
     background-color: rgba(0, 0, 255, 0);
     color: #FFFFFF;
-    font-size: 5rem;
+    font-size: 4rem;
     border: none;
     cursor: pointer;
     /* align-content: right; */
     top: 1%;
-    right: 1vw;
+    right: 1.1vw;
     opacity: 1;
 }
 .closeButton:hover{
