--- a/index.css
+++ b/index.css
@@ -1,21 +1,28 @@
 
-
+/* Removes all default margins & padding */
 *
 {
     margin: 0;
     padding: 0;
 }
+
+/* Sets size of rem to 16pt */
 html{
     font-size: 16pt;
 }
+
+/* Sets the background color to black */
 body{
-    margin:0;
     background-color: black;
 }
+
+/* Sets the width & height of the Javascript canvas, where the space scene will be drawn on */
 canvas{
     width: 100%;
     height: 100%;
 }
+
+/* Default styles for headers, body copy, & links */
 h1{
     
     color: white;
@@ -37,23 +44,26 @@ a{
 }
 
 
-
+/* Styles positioning general styles of menu icon */
 #menu-icon{
     position: fixed; 
     top: 1rem; 
     right: 1rem; 
-    /* z-index: 100;  */
     cursor: pointer;
     opacity: 0.6;
 }
+
+/* Styles each individual line of menu icon */
 #menu-icon span {
     display: block;
     width: 2rem; /* Width of the hamburger lines */
     height: 0.3rem; /* Height of the hamburger lines */
     background-color: white; /* Color of the hamburger lines */
     margin: 0.3rem 0rem; /* Spacing between the lines */
-    /* transition: all 0.3s ease-in-out; */
+    transition: all 0.3s ease-in-out;
 }
+
+/* General styles for the planet navigation menu */
 #planet-menu{
     font-size: 1rem;
     line-height: 1.75rem;
@@ -69,6 +79,8 @@ a{
     transition: opacity 0.5s ease, right 0.5s ease; /* Smooth transition for opacity and right property */
     opacity: 0.6;
 }
+
+/* Additional styles for the planet navigation menu */
 #planet-menu ul {
     margin: 0;
     padding: 0;
@@ -80,11 +92,15 @@ a{
 #planet-menu li:hover {
     background-color: #333;
 }
+
+/* Styles content of content in planet navigation menu */
 #planet-list{
     list-style: none; 
     padding: 2rem; 
     color: white;
 }
+
+/* Styles introduction text */
 #introText {
     position: fixed;
     top: 2rem;
@@ -92,39 +108,44 @@ a{
     opacity: 0.6;
 }
 
+/* Styles the overlay div that opens when a planet is clicked */
 #planet-info-overlay {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80vw; /* Fixed width */
-    height: 70vh; /* Fixed height */
+    width: 80vw; 
+    height: 70vh; 
     background: rgba(20, 26.7, 51.4, 0.6);
     color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    /* z-index: 1000; */
     overflow: auto;
-    display: none; /* Hidden by default */
+    display: none;
 }
+
+/* Header section of overlay div */
 #overlay-header{
     position:relative;
     height: 10rem;
     align-items: center;
 }
+
+/* Body section of overlay div */
 #overlay-body{
     position: relative;
     height: 14.5rem;
     margin: 0;
 }
+
+/* Links section of overlay div */
 #overlay-links{
     position: relative;
     display: block;
     height: 5rem;
-    /* display: flex; */
-    
 }
 
+/* Styles the tabs of overlay div */
 #planet-tabs {
     margin-bottom: 0.5rem;
     position: relative;
@@ -133,38 +154,33 @@ a{
     justify-content: flex-start; /* Aligns children at the start of the container */
     align-content: top;
 }
+
+/* Styles the links of the overlay div */
 #planet-links{
     position: relative;
     display: block;
     width: 100%; /* Ensures the container takes up the full width */
     height: 20%;
     align-items: center;
-    
-    
 }
 
 
 
+/* Styles the headers of introduction text */
 .wlcmH1{
-    /* font-family: cursive; */
     font-weight: normal;
     font-family: "Space Grotesk", sans-serif;
     font-weight: 600;
     user-select: none;
-    /* animation-name: welcomeText;
-    animation-duration: 4s;
-    animation-delay: 2s;
-    animation-fill-mode: forwards; */
 }
+/* Styles the supporting info of introduction text */
 .p1{
     color: white;
     opacity: 1;
     user-select: none;
-    /* animation-name: secondaryText;
-    animation-duration: 4s;
-    animation-delay: 7s;
-    animation-fill-mode: forwards; */
 }
+
+/* Styles the name of the planet in the overlay div */
 .planetName{
     top: 1.3vw;
     left: 1.5vw;
@@ -176,6 +192,8 @@ a{
     width: 25%;
     cursor: pointer;
 }
+
+/* Styles the description text in the overlay div */
 .planetInformation{
     font-family: "Space Mono", monospace;
     font-weight: 400;
@@ -185,6 +203,8 @@ a{
     width: 40%;
     text-align: center;
 }
+
+/* Styles the tabs of the overlay div */
 .planet-info-tabs{
     font-size: 1.25rem;
     position: relative;
@@ -200,9 +220,13 @@ a{
     margin-top: 2rem;
     cursor: pointer;
 }
+
+/* Allows for a change in hue when cursor hovers over individual tabs */
 .planet-info-tabs:hover {
     background-color: #0056b3; /* Darker shade when hovered */
 }
+
+/* Styles the links of the planet overlay div */
 .planet-info-links{
     display: block;
     font-size: 1rem;
@@ -221,12 +245,18 @@ a{
     cursor: pointer;
     
 }
+
+/* Allows for a change in hue when cursor hovers over planet overlay div */
 .planet-info-links:hover {
     background-color: #0056b3; /* Darker shade when hovered */
 }
+
+/* Allows for overlay div to temporarily removed from display */
 .hidden {
     display: none;
 }
+
+/* Styles close button of overlay div */
 .closeButton {
     position: absolute;
     background-color: rgba(0, 0, 255, 0);
@@ -234,11 +264,12 @@ a{
     font-size: 3rem;
     border: none;
     cursor: pointer;
-    /* align-content: right; */
     top: 8%;
     right: 1.1vw;
     opacity: 1;
 }
+
+/* Allows for change in hue when close button is hovered */
 .closeButton:hover{
     color: red;
 }
@@ -246,27 +277,24 @@ a{
 
 
 
-@keyframes welcomeText{
-    0% {font-size: 10rem; }
-    100%{font-size: 5rem; animation-timing-function: ease-out; }
-}
-@keyframes secondaryText{
-    0%{opcaity: 0;}
-    100%{opacity: 1;}
-}
+/* Styles set when viewport width is under 601 pixels */
 @media(max-width: 600px){
     .wlcmH1{
         font-size: 2rem;
         line-height: 2rem;
     }
 }
+
+/* Styles set viewport exceeds 600 pixels */
 @media(min-width: 601px){
     .wlcmH1{
         font-size: 2rem;
-        line-height: 1rem;
+        line-height: 2rem;
     }
 }
-/* 
+
+/*
+ 
 (First condition max-width up to 400, the rest can be min-width
 
 400 older devices
