--- a/index.css
+++ b/index.css
@@ -134,7 +134,7 @@ a{
 /* Body section of overlay div */
 #overlay-body{
     position: relative;
-    height: 14.5rem;
+    min-height: 14.5rem;
     margin: 0;
 }
 
@@ -142,7 +142,7 @@ a{
 #overlay-links{
     position: relative;
     display: block;
-    height: 5rem;
+    min-height: 5rem;
 }
 
 /* Styles the tabs of overlay div */
@@ -161,6 +161,7 @@ a{
     position: relative;
     display: block;
     width: 100%; /* Ensures the container takes up the full width */
+    margin-top: 2rem;
     height: 20%;
     align-items: center;
 }
