--- a/index.css
+++ b/index.css
@@ -103,8 +103,8 @@ a{
 /* Styles introduction text */
 #introText {
     position: fixed;
-    top: 2rem;
-    left: 2rem;
+    top: 1.3rem;
+    left: 1rem;
     opacity: 0.6;
 }
 
@@ -304,6 +304,69 @@ a{
 
 
 
+/* Positioning the switch in the bottom right corner */
+.switch {
+    position: fixed; /* Fixed positioning relative to the viewport */
+    left: 1rem; /* 1rem * 0.8 */
+    bottom: 1.3rem; /* 1rem * 0.8 */
+    width: 1.28rem; /* 1.6rem * 0.8 */
+    height: 2.24rem; /* 2.8rem * 0.8 */
+}
+  
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: hsla(0, 0%, 100%, 0.3); /* White with 60% opacity */
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    width: 0.96rem; /* 1.2rem * 0.8 */
+    height: 0.96rem; /* 1.2rem * 0.8 */
+    left: 0.16rem; /* 0.2rem * 0.8 */
+    top: 0.16rem; /* 0.2rem * 0.8 */
+    background-color: hsla(0, 0%, 100%, 0.6);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+input:checked + .slider {
+    background-color: #2196F3;
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateY(0.96rem); /* 1.2rem * 0.8 */
+    -ms-transform: translateY(0.96rem); /* 1.2rem * 0.8 */
+    transform: translateY(0.96rem); /* 1.2rem * 0.8 */
+}
+  
+/* Rounded sliders */
+.slider.round {
+    border-radius: 1.28rem; /* 1.6rem * 0.8 */
+}
+  
+.slider.round:before {
+    border-radius: 50%;
+}
 /*
  
 (First condition max-width up to 400, the rest can be min-width
